1. did some work on making talk more intelligent and fixed a>b problem.
2. fixed a nasty problem on input when being hit with full buffers of 
data (eg at init time with large lists of node/users on fast links).
3. fixed realtime input filter changing.
4. added announce->talk conversion for routable calls when announces of the
form 'to g1tlh hello' or 'g1tlh hello' appear. This also suppresses similar
announces for users whose callsign is not the one in the announce.
11Sep01=======================================================================
1. added IP address logging of connections
10Sep01=======================================================================
1. clear/* node_default and user_default now work.
2. in acc or rej/* you can now use (comma separated) prefixes as well as lists
of numbers for things like *_dxcc, *_itu and *_cq (eg: by_dxcc ve,w); just
remember that countries like ve and w have lots of zones and itus!
3. Added all the clear/* commands to help and added some comments about 2.
4. All filters (including *_default ones) are now reinstalled on channels in
realtime, so changing a filter does NOT require a disconnect and reconnect
cycle anymore. 
09Sep01=======================================================================
1. Add show/dxstats command
2. Add show/hfstats command
3. Add show/vhfstats command
4. Add show/hftable command
5. Add show/vhftable command (BE WARNED, the first time you run one of these
commands it will take some considerable time to complete, thereafter it will
be a lot faster).
08Sep01=======================================================================
1. Update the sgml docs on filtering a bit.
06Sep01=======================================================================
1. prevent nodes appearing as users from incoming PC16s
2. Change ping averaging to be like TCP and become a smoothed RTT.
3. Make all the Prompts in stat/* like output appear in alphebetical order